# pallet-detection_ground-segmentation

./: LICENSE  README.md  requirements.txt
pallet_detection/: requirements.txt  test.py
pallet_detection/configs/: dataset.yaml
pallet_detection/runs/detect/predict2/labels/: image_00000.txt
pallet_detection/runs/train/pallet_detection4/: args.yaml  results.csv
pallet_detection/scripts/: analysis.py  coco2yolo.py  optimize_model.py  train_detectiom.py  verify_onnx.py
ros2_ws_src/ground_segmentation_node/: package.xml  setup.cfg  setup.py
ros2_ws_src/ground_segmentation_node/ground_segmentation_node/: ground_segmenter.py
ros2_ws_src/pallet_detection_node/: package.xml  setup.cfg  setup.py
ros2_ws_src/pallet_detection_node/launch/: pallet_detection_launch.py
ros2_ws_src/pallet_detection_node/pallet_detection_node/: __main__.py  pallet_detector.py
segmentation/configs/: dataset.yaml
segmentation/scripts/: analysis.py  coco2yolo.py  inference.py  optimize_model.py  train_segmentation.py  verify_onnx.py
segmentation/scripts/runs/train/ground_segmentation5/: args.yaml  results.csv
