<?xml version="1.0"?>
<package format="3">
  <name>ground_segmentation_node</name>
  <version>0.0.0</version>
  <description>Ground segmentation using YOLOv8 in ROS2</description>
  <maintainer email="sumeet@example.com">Sumeet</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

